# SnipRx

./: Cargo.toml  README.md
.github/workflows/: build.yaml
src/: forward_message.rs  load_channels.rs  load_required_env_variables.rs  main.rs  process_ignored_channels.rs  save_json.rs
